--- a/src/apps/user/templates/user/homepage.html
+++ b/src/apps/user/templates/user/homepage.html
@@ -23,12 +23,12 @@
                     <i class="lni lni-menu-hamburger-1"></i>
                 </button>
                 <div class="sidebar-logo">
-                    <a href="#">EcoGo</a>
+                    <a href="/homepage">EcoGo</a>
                 </div>
             </div>
             <ul class="sidebar-nav">
                 <li class="sidebar-item">
-                    <a href="#" class="sidebar-link">
+                    <a href="/homepage" class="sidebar-link">
                         <i class="lni lni-user-4"></i>
                         <span>Profile</span>
                     </a>
