--- a/src/apps/location/templates/location/announcement_detail.html
+++ b/src/apps/location/templates/location/announcement_detail.html
@@ -1,15 +1,67 @@
-{% extends 'base.html' %}
-{% block content %}
-<head>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    {% load static %}
+    <link rel="stylesheet" href="{% static '/css/navbar.css' %}" />
+    <link rel="stylesheet" href="{% static '/css/page.css' %}" />
+    <link rel="stylesheet" href="{% static '/css/avatar.css' %}" />
+    <link rel="stylesheet" href="{% static '/css/centered.css' %}" />
+    <link rel="stylesheet" href="{% static '/css/footer.css' %}" />
+    <link rel="stylesheet" href="https://cdn.lineicons.com/5.0/lineicons.css" />
+    <!-- Bootstrap -->
+    <link
+      rel="stylesheet"
+      href="{% static 'bootstrap-5.3.3-dist/bootstrap-5.3.3-dist/css/bootstrap.min.css' %}"
+    />
     <!-- Leaflet CSS -->
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
+    />
     <!-- Leaflet JS -->
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
-</head>
-<body>
-    <div id="map" style="width: 100%; height: 100%" tabindex="0"></div>
-</body>
-<script>
+    <title>Announcements</title>
+  </head>
+  <body>
+    <div class="wrapper">
+        <aside id="sidebar">
+            <ul class="sidebar-nav">
+                <li class="sidebar-item">
+                    <a href="/homepage" class="sidebar-link">
+                        <i class="lni lni-user-4"></i>
+                        <span>Home</span>
+                    </a>
+                    <li class="sidebar-item">
+                        <a href="/location/announcements" class="sidebar-link">
+                            <i class="lni lni-arrow-left"></i>
+                            <span>Announcements</span>
+                        </a>
+                    </li>
+                </li>
+            </ul>
+            <div class="sidebar-footer">
+                <a href="#" class="sidebar-link">
+                    <i class="lni lni-gear-1"></i>
+                    <span>Settings</span>
+                </a>
+                <a href="{% url 'landing' %}" class="sidebar-link">
+                    <i class="lni lni-exit"></i>
+                    <span>Logout</span>
+                </a>
+            </div>
+        </aside>
+    <div
+      class="main p-3"
+      id="map"
+      style="width: 100%; height: 100%"
+      tabindex="0"
+    ></div>
+</div>
+  </body>
+  <script>
     // Creates the map to be displayed
     var map = L.map('map').setView([{{ circle_point.0 }}, {{ circle_point.1 }}], 18);
     L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
@@ -23,5 +75,5 @@
         fillOpacity: 0.5,
         radius: {{ radius }} // By default is 25
     }).addTo(map);
-</script>
-{% endblock %}
+  </script>
+</html>
