Fixing SITE_DOMAIN

--- a/src/apps/location/templates/location/announcement_list.html
+++ b/src/apps/location/templates/location/announcement_list.html
@@ -65,7 +65,7 @@
               ></div>
               <p class="text-center">{{ announcement.date }}</p>
               <a
-                href="http://127.0.0.1:8000/location/announcement/{{ announcement.name }}"
+                href="/location/announcement/{{ announcement.name }}"
               >
                 <button type="button" class="btn btn-sm btn-outline-secondary">
                   View
